--- a/frontEnd/UserFront/courses.html
+++ b/frontEnd/UserFront/courses.html
@@ -2,11 +2,11 @@
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
-    <title>Rabbil Hasan | Expert Mobile And Web Developer in Bangladesh</title>
+    <title>Mithun Banerjee | Expert Mobile And Web Developer in Bangladesh</title>
     <meta name="google-site-verification" content="J2K-awrLm--LtTSkUGmFsRpFFTU0W1V5PqZTQp0b6pg" />
-    <meta name="description" content="Rabbil Hasan is an Expert Web Developer in Bangladesh. Expert Mobile App Developer in Bangladesh.He is highly talented, experienced, professional and cooperative software engineer, working in programming and web world for more than 4 years. Moreover Rabbil Hasan has a skilled team for achieving his goal named “Team Rabbil”.Team Rabbil assure you a wide range of quality IT services. ">
+    <meta name="description" content="Mithun Banerjee is an Expert Web Developer in Bangladesh. Expert Mobile App Developer in Bangladesh.He is highly talented, experienced, professional and cooperative software engineer, working in programming and web world for more than 4 years.">
     <meta name="keywords" content="Expert Web Developer in Bangladesh, Expert Mobile App Developer in Bangladesh, Android App Developer in Bangladesh">
-    <meta name="author" content="Rabbil Hasan">
+    <meta name="author" content="Mithun Banerjee">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" >
@@ -209,7 +209,7 @@
     </div>
 </div>
 <div class="container-fluid bg-dark text-white m-0 text-center p-3">
-    <p class="rights-text  my-2 ">সর্বস্বত্ব রাব্বিল হাসান দ্বারা সংরক্ষিত; ২০১৯-২০২০ </p>
+    <p class="rights-text  my-2 ">সর্বস্বত্ব মিঠুন ব্যানার্জী দ্বারা সংরক্ষিত; ২০২২-২০২৩ </p>
 </div>
 
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
